# stm32-esp12s

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
